--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-genie": "^0.1.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "recharts": "^2.0.0-beta.1"
